fix: allow pipeline names to render up to page width in Comparison and Pipeline Activity view
- Refactors the pipeline header title widget to be shared across these views
- splits pipeline pause header into an actions-only view to be reusable to we get the same semantics on Pipeline Config
- Fixes the flexing so the pipeline name will be cut off a last resort, before pushing any pipeline pause buttons or search box off the screen to the right.

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/compare/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/compare/index.scss
@@ -19,20 +19,6 @@ $width-for-msg: 100px;
 $width-for-instance-selection: 360px;
 $dropdown-button-content-z-index: 5;
 
-.page-header {
-  display: flex;
-
-  .pipeline-info {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-
-    .value {
-      font-size: 15px;
-    }
-  }
-}
-
 .label {
   font-size: 0.625rem;
 }
